--- a/main/templates/bit/header.html
+++ b/main/templates/bit/header.html
@@ -14,6 +14,9 @@
         # include 'bit/contact_menu.html'
   <li class="{{'active' if html_class == 'contact-create'}}">
     <a href="{{url_for('contact_create')}}"><i class="fa fa-file"></i> Create Contact</a>
+  </li>
+   <li class="{{'active' if html_class == 'contact-list'}}">
+    <a href="{{url_for('contact_list')}}"><i class="fa fa-list"></i> Contact List</a>
   </li>        
       </ul>
       <ul class="nav navbar-nav navbar-right">
