--- a/main/templates/contact_list.html
+++ b/main/templates/contact_list.html
@@ -17,7 +17,7 @@
     <tbody>
       # for contact_db in contact_dbs
         <tr>
-          <td><a href="{{url_for('contact_view', contact_id=contact_db.key.id())}}">{{contact_db.key.id()}}</a></td>
+          <td><a href="{{url_for('contact_update', contact_id=contact_db.key.id())}}">{{contact_db.key.id()}}</a></td>
           <td><a href="{{url_for('contact_view', contact_id=contact_db.key.id())}}">{{contact_db.name}}</a></td>
           <td>{{contact_db.email}}</td>
           <td>{{contact_db.phone}}</td>
